# uea_ucr_datasets

./: .gitignore  README.md  pyproject.toml
tests/: test_uea_ucr_datasets.py
uea_ucr_datasets/: __init__.py  dataset.py
