[tool.poetry]
name = "uea_ucr_datasets"
version = "0.1.0"
description = ""
authors = ["Max Horn <max.horn@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
sktime = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
